// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCodeBlock dynamic content updates DOM when input changes 1`] = `
"<div>
  <div class=\\"euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingLarge prismjs language-javascript\\">
    <pre class=\\"euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePreWrap\\" tabindex=\\"-1\\">
      <code class=\\"euiCodeBlock__code javascript\\">const value = 'State 1'</code>
    </pre>
  </div>
</div>"
`;

exports[`EuiCodeBlock dynamic content updates DOM when input changes 2`] = `
"<div>
  <div class=\\"euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingLarge prismjs language-javascript\\">
    <pre class=\\"euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePreWrap\\" tabindex=\\"-1\\">
      <code class=\\"euiCodeBlock__code javascript\\">const value = 'State 2'</code>
    </pre>
  </div>
</div>"
`;

exports[`EuiCodeBlock props fontSize l is rendered 1`] = `
<div
  class="euiCodeBlock euiCodeBlock--fontLarge euiCodeBlock--paddingLarge prismjs language-none"
>
  <pre
    class="euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePreWrap"
    tabindex="-1"
  >
    <code
      class="euiCodeBlock__code"
    >
      var some = 'code';
console.log(some);
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock props fontSize m is rendered 1`] = `
<div
  class="euiCodeBlock euiCodeBlock--fontMedium euiCodeBlock--paddingLarge prismjs language-none"
>
  <pre
    class="euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePreWrap"
    tabindex="-1"
  >
    <code
      class="euiCodeBlock__code"
    >
      var some = 'code';
console.log(some);
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock props fontSize s is rendered 1`] = `
<div
  class="euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingLarge prismjs language-none"
>
  <pre
    class="euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePreWrap"
    tabindex="-1"
  >
    <code
      class="euiCodeBlock__code"
    >
      var some = 'code';
console.log(some);
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock props isCopyable is rendered 1`] = `
<EuiCodeBlock
  isCopyable={true}
>
  <EuiCodeBlockImpl
    inline={false}
    isCopyable={true}
  >
    <div
      className="euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingLarge euiCodeBlock--hasControls prismjs language-none"
      style={Object {}}
    >
      <pre
        className="euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePreWrap"
        style={Object {}}
        tabIndex={-1}
      >
        <code
          className="euiCodeBlock__code"
        >
          var some = 'code';
console.log(some);
        </code>
      </pre>
      <div
        className="euiCodeBlock__controls"
      >
        <div
          className="euiCodeBlock__copyButton"
        >
          <EuiI18n
            default="Copy"
            token="euiCodeBlock.copyButton"
          >
            <EuiCopy
              afterMessage="Copied"
              textToCopy="var some = 'code';
console.log(some);"
            >
              <EuiToolTip
                delay="regular"
                onMouseOut={[Function]}
                position="top"
              >
                <span
                  className="euiToolTipAnchor"
                  onKeyUp={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  <EuiButtonIcon
                    aria-label="Copy"
                    color="text"
                    iconType="copy"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                  >
                    <button
                      aria-label="Copy"
                      className="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      type="button"
                    >
                      <EuiIcon
                        aria-hidden="true"
                        className="euiButtonIcon__icon"
                        color="inherit"
                        size="m"
                        type="copy"
                      >
                        <span
                          aria-hidden="true"
                          className="euiButtonIcon__icon"
                          color="inherit"
                          data-euiicon-type="copy"
                          size="m"
                        />
                      </EuiIcon>
                    </button>
                  </EuiButtonIcon>
                </span>
              </EuiToolTip>
            </EuiCopy>
          </EuiI18n>
        </div>
      </div>
    </div>
  </EuiCodeBlockImpl>
</EuiCodeBlock>
`;

exports[`EuiCodeBlock props language is rendered 1`] = `
<div
  class="euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingLarge prismjs language-html"
>
  <pre
    class="euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePreWrap"
    tabindex="-1"
  >
    <code
      class="euiCodeBlock__code html"
    >
      <span
        class="euiCodeBlock__line"
      >
        var some = 'code';

      </span>
      <span
        class="euiCodeBlock__line"
      >
        console.log(some);
      </span>
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock props overflowHeight is rendered 1`] = `
<div
  class="euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingLarge euiCodeBlock--hasControls prismjs language-none"
  style="max-height:200px"
>
  <pre
    class="euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePreWrap"
    style="max-height:200px"
    tabindex="-1"
  >
    <code
      class="euiCodeBlock__code"
    >
      var some = 'code';
console.log(some);
    </code>
  </pre>
  <div
    class="euiCodeBlock__controls"
  >
    <button
      aria-label="Expand"
      class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiCodeBlock__fullScreenButton"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="fullScreen"
      />
    </button>
  </div>
</div>
`;

exports[`EuiCodeBlock props paddingSize l is rendered 1`] = `
<div
  class="euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingLarge prismjs language-none"
>
  <pre
    class="euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePreWrap"
    tabindex="-1"
  >
    <code
      class="euiCodeBlock__code"
    >
      var some = 'code';
console.log(some);
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock props paddingSize m is rendered 1`] = `
<div
  class="euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingMedium prismjs language-none"
>
  <pre
    class="euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePreWrap"
    tabindex="-1"
  >
    <code
      class="euiCodeBlock__code"
    >
      var some = 'code';
console.log(some);
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock props paddingSize none is rendered 1`] = `
<div
  class="euiCodeBlock euiCodeBlock--fontSmall prismjs language-none"
>
  <pre
    class="euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePreWrap"
    tabindex="-1"
  >
    <code
      class="euiCodeBlock__code"
    >
      var some = 'code';
console.log(some);
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock props paddingSize s is rendered 1`] = `
<div
  class="euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingSmall prismjs language-none"
>
  <pre
    class="euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePreWrap"
    tabindex="-1"
  >
    <code
      class="euiCodeBlock__code"
    >
      var some = 'code';
console.log(some);
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock props transparentBackground is rendered 1`] = `
<div
  class="euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingLarge euiCodeBlock--transparentBackground prismjs language-none"
>
  <pre
    class="euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePreWrap"
    tabindex="-1"
  >
    <code
      class="euiCodeBlock__code"
    >
      var some = 'code';
console.log(some);
    </code>
  </pre>
</div>
`;

exports[`EuiCodeBlock renders a code block 1`] = `
<div
  class="euiCodeBlock euiCodeBlock--fontSmall euiCodeBlock--paddingLarge prismjs language-none testClass1 testClass2"
>
  <pre
    class="euiCodeBlock__pre euiCodeBlock__pre--whiteSpacePreWrap"
    tabindex="-1"
  >
    <code
      aria-label="aria-label"
      class="euiCodeBlock__code"
      data-test-subj="test subject string"
    >
      var some = 'code';
console.log(some);
    </code>
  </pre>
</div>
`;
